全国の市町村CSVついか

--- a/JavaBasic/resources/mains.properties
+++ b/JavaBasic/resources/mains.properties
@@ -1,5 +1,5 @@
-rpg=yoshida.tkm.sukiri2.mains.TextRpg
-rpg1=yoshida.tkm.sukiri2.mains.TextRpg
-abc=yoshida.tkm.sukiri2.mains.TextRpg
-rpg3=yoshida.tkm.sukiri2.mains.TextRpg
-rpg4=yoshida.tkm.sukiri2.mains.TextRpg
+rpg=ysg.tkm.sukiri2.mains.TextRpg
+rpg1=ysg.tkm.sukiri2.mains.TextRpg
+abc=ysg.tkm.sukiri2.mains.TextRpg
+rpg3=ysg.tkm.sukiri2.mains.TextRpg
+rpg4=ysg.tkm.sukiri2.mains.TextRpg
